# sms-backup-and-restore-exporter

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README.md  pyproject.toml  requirements.txt
src/: __init__.py  backup_extractor.py  call_log_generator.py  contacts_vcard_extractor.py  mms_media_extractor.py  sms_text_extractor.py  vcard_multimedia_helper.py  vcf_field_parser.py  xml_backup_exporter.py
tests/: test_call_log_generator.py  test_sms_text_extractor.py  test_xml_backup_exporter.py
