[project]
name = "sms-backup-restore-extractor"
version = "1.0.0"
description = "Extract media files, call logs, or vcf/vCard media from SMS Backup & Restore backup archives"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "certifi>=2024.8.30",
    "charset-normalizer>=3.4.0",
    "idna>=3.10",
    "lxml>=5.3.0",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
]

[project.scripts]
backup-extractor = "backup_extractor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
